[package]
name = "dioxus-library-template"
version = "0.2.0"
edition = "2021"
description = "Library for Dioxus 🧬"
readme = "./README.md"
homepage = "https://github.com/dioxus-community/dioxus-library-template"
repository = "https://github.com/dioxus-community/dioxus-library-template"
keywords = ["dioxus"]
categories = ["gui"]

[dependencies]
dioxus-lib = { version = "0.7.0-alpha.3", default-features = false, features = ["macro", "hooks", "signals", "html"] }
euclid = "0.22.11"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["desktop"] }

[[example]]
name = "demo"
path = "examples/demo.rs"
 