[package]
name = "dioxus-portal"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Portal component for Dioxus"
readme = "./README.md"
homepage = "https://github.com/tarakojo/dioxus-portal"
repository = "https://github.com/tarakojo/dioxus-portal"
keywords = ["dioxus", "portal", "tooltip", "dropdown"]
categories = ["gui"]

[dependencies]
dioxus-lib = { version = "0.7.0-alpha.3", default-features = false, features = ["macro", "hooks", "signals", "html"] }
euclid = "0.22.11"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["desktop"] }

[[example]]
name = "demo"
path = "examples/demo.rs"
 